# soc_etl

./: .gitignore  README.md  load_soc_definitions.py  logging_config.json  metadata.toml  pyproject.toml
